trying to fix issue with nabar on mobile

--- a/src/scss/modules/header.scss
+++ b/src/scss/modules/header.scss
@@ -1,6 +1,7 @@
 .header {
   width: 100%;
   min-height: calc(100% - 50px);
+  min-height: -webkit-fill-available;;
   margin-top: 50px;
   background-image:url(../assets/img/bee_black.jpg);
   background-position: center;
